# RAG_Demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
data/knowledge_base/: credit_card_policy.md  home_loan_policy.md  savings_account_policy.md
k8s/: deployment.yaml
notebooks/: test_datatypes.ipynb
src/rag_demo/: __init__.py  api.py  config.py  generator.py  indexer.py  loader.py  logger.py  models.py  pipeline.py  retriever.py
